--- a/CameraPropertiesTool/Pages/CurrentSetting/ExtendedCameraControlPage.xaml
+++ b/CameraPropertiesTool/Pages/CurrentSetting/ExtendedCameraControlPage.xaml
@@ -13,120 +13,17 @@
         <StackPanel>
             <TextBlock x:Name="SelectedCameraTB"/>
             <MediaPlayerElement x:Name="UIMediaPlayerElement" AreTransportControlsEnabled="False" Width="300" Height="300" />
+           
+            <ComboBox x:Name="DropDownList"
+           
+              Height="40"
+              VerticalAlignment="Center"
+              HorizontalAlignment="Center"
+              PlaceholderText="Get payload"
+               Visibility="Collapsed"
+              SelectionChanged="DropDownList_SelectionChanged">
+            </ComboBox>
             <TextBlock x:Name="UITextOutput" TextWrapping="Wrap" Width="450" HorizontalAlignment="Center"/>
-            <!--<StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="10" HorizontalAlignment="Center">
-                <TextBlock
-                    x:Uid="DefaultContrast"
-                    Text="Contrast"
-                    Visibility="{Binding ElementName=DefaultContrastSlider, Path=Visibility}"
-                    VerticalAlignment="Center" />
-                <Slider 
-                    x:Name="DefaultContrastSlider"
-                    x:Uid="DefaultContrastSlider"
-                    AutomationProperties.LabeledBy="{Binding ElementName=DefaultContrast}"
-                    Minimum="0"
-                    Maximum="100"
-                    StepFrequency="1"
-                    ValueChanged="DefaultContrastSlider_ValueChanged"
-                    HorizontalAlignment="Center"
-                    MaxWidth="300"
-                    MinWidth="200"
-                    Visibility="Collapsed"
-                    VerticalAlignment="Center"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="10" HorizontalAlignment="Center">
-                <TextBlock
-                    x:Uid="DefaultBrightness"
-                    Text="Brightness"
-                    Visibility="{Binding ElementName=DefaultBrightnessSlider, Path=Visibility}"
-                    VerticalAlignment="Center" />
-                <Slider 
-                    x:Name="DefaultBrightnessSlider"
-                    x:Uid="DefaultBrightnessSlider"
-                    AutomationProperties.LabeledBy="{Binding ElementName=DefaultBrightness}"
-                    Minimum="0"
-                    Maximum="100"
-                    StepFrequency="1"
-                    ValueChanged="DefaultBrightnessSlider_ValueChanged"
-                    HorizontalAlignment="Center"
-                    MaxWidth="300"
-                    MinWidth="200"
-                    Visibility="Collapsed"
-                    VerticalAlignment="Center"/>
-            </StackPanel>-->
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="10" HorizontalAlignment="Center">
-                <TextBlock
-                    x:Uid="DefaultBlur"
-                    Text="Blur"
-                    Visibility="{Binding ElementName=DefaultBlurToggle, Path=Visibility}"
-                    VerticalAlignment="Center" />
-                <ToggleSwitch 
-                    x:Name="DefaultBlurToggle"
-                    x:Uid="DefaultBlurToggle"
-                    AutomationProperties.LabeledBy="{Binding ElementName=DefaultBlur}"
-                    Toggled="DefaultBlurToggle_Toggled"
-                    HorizontalAlignment="Center"
-                    MaxWidth="300"
-                    MinWidth="200"
-                    Visibility="Collapsed"
-                    VerticalAlignment="Center"/>
-
-
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="10" HorizontalAlignment="Center">
-                <TextBlock
-                    x:Uid="DefaultEC"
-                    Text="EyeContect"
-                    Visibility="{Binding ElementName=DefaultECToggle, Path=Visibility}"
-                    VerticalAlignment="Center" />
-                <ToggleSwitch 
-                    x:Name="DefaultECToggle"
-                    x:Uid="DefaultECToggle"
-                    AutomationProperties.LabeledBy="{Binding ElementName=DefaultEC}"
-                    Toggled="DefaultECToggle_Toggled"
-                    HorizontalAlignment="Center"
-                    MaxWidth="300"
-                    MinWidth="200"
-                    Visibility="Collapsed"
-                    VerticalAlignment="Center"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="10" HorizontalAlignment="Center">
-                <TextBlock
-                    x:Uid="DefaultAF"
-                    Text="AutoFraming"
-                    Visibility="{Binding ElementName=DefaultAFToggle, Path=Visibility}"
-                    VerticalAlignment="Center" />
-                <ToggleSwitch 
-                    x:Name="DefaultAFToggle"
-                    x:Uid="DefaultAFToggle"
-                    AutomationProperties.LabeledBy="{Binding ElementName=DefaultAF}"
-                    Toggled="DefaultAFToggle_Toggled"
-                    HorizontalAlignment="Center"
-                    MaxWidth="300"
-                    MinWidth="200"
-                    Visibility="Collapsed"
-                    VerticalAlignment="Center"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="10" HorizontalAlignment="Center">
-                <TextBlock
-                    x:Uid="DefaultEVComp"
-                    Text="EVCompensation"
-                    Visibility="{Binding ElementName=DefaultEVCompSlider, Path=Visibility}"
-                    VerticalAlignment="Center" />
-                <Slider 
-                    x:Name="DefaultEVCompSlider"
-                    x:Uid="DefaultEVCompSlider"
-                    AutomationProperties.LabeledBy="{Binding ElementName=DefaultEVComp}"
-                    Minimum="0"
-                    Maximum="100"
-                    StepFrequency="1"
-                    ValueChanged="DefaultEVCompSlider_ValueChanged"
-                    HorizontalAlignment="Center"
-                    MaxWidth="300"
-                    MinWidth="200"
-                    Visibility="Collapsed"
-                    VerticalAlignment="Center"/>
-            </StackPanel>
 
         </StackPanel>
 
